Copy/Paste UV Operator Sometimes doesn't Work #106314

Closed
opened 2023-03-30 15:48:19 +02:00 by Omar · 4 comments

System Information
Operating system: Linux-5.19.0-35-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.86.01

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: (newest version of Blender that worked as expected)

Short description of error
Copy/Paste UV is failing on a set of identical islands

Exact steps for others to reproduce the error
Select one island. In the UV Editor to UV->Copy UVs. Select the other island. In the UV Editor Select UV->Paste UVs. The island doesn't move to the first one.
Check Attached .blend file.

Added the alternative file from #106429 (unable to repro the issue with CopyUV.blend file)

**System Information** Operating system: Linux-5.19.0-35-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.86.01 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: (newest version of Blender that worked as expected) **Short description of error** Copy/Paste UV is failing on a set of identical islands **Exact steps for others to reproduce the error** Select one island. In the UV Editor to UV->Copy UVs. Select the other island. In the UV Editor Select UV->Paste UVs. The island doesn't move to the first one. Check Attached .blend file. Added the alternative file from #106429 (unable to repro the issue with `CopyUV.blend` file)
Omar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-30 15:48:20 +02:00
Iliya Katushenock added the
Interest
UV Editing
label 2023-03-30 15:49:11 +02:00
Chris Blackbourn self-assigned this 2023-03-31 00:09:06 +02:00

Looks like we're tripping this safe-guard to prevent an infinite loop:

    if (iteration_count++ > 10000000) {
      /* Unlikely to find a solution, may as well give up.
       * Can occur with moderate sized inputs where the graph has lots of symmetry, e.g. a cube
       * subdivided 3x times.
       */
      *inc_pos = 0;
      break;
    }

If you remove that, the "Paste" operation eventually completes successfully on iteration_count == 255762942, about 25x larger than the current threshold.

Looks like we're tripping this safe-guard to prevent an infinite loop: ``` if (iteration_count++ > 10000000) { /* Unlikely to find a solution, may as well give up. * Can occur with moderate sized inputs where the graph has lots of symmetry, e.g. a cube * subdivided 3x times. */ *inc_pos = 0; break; } ``` If you remove that, the "Paste" operation eventually completes successfully on `iteration_count == 255762942`, about 25x larger than the current threshold.
Author

It would be nice to get a warning in the UI that the operation failed because of going over the iteration limit. Right now the user gets no feedback whatsoever.

It would be nice to get a warning in the UI that the operation failed because of going over the iteration limit. Right now the user gets no feedback whatsoever.

It would be nice to get a warning in the UI that the operation failed because of going over the iteration limit. Right now the user gets no feedback whatsoever.

I think that's a very reasonable resolution for the 3.5 build.

> It would be nice to get a warning in the UI that the operation failed because of going over the iteration limit. Right now the user gets no feedback whatsoever. I think that's a very reasonable resolution for the 3.5 build.
Member

Confirming for now.

Confirming for now.
Pratik Borhade added
Module
Modeling
Status
Confirmed
Interest
User Interface
and removed
Status
Needs Triage
labels 2023-03-31 07:27:34 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-06 03:37:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106314
No description provided.