Fix #106314: warn user when paste-uvs fails to find match