source/blender/editors/uvedit/uvedit_clipboard.cc
@@ -47,8 +47,8 @@ class UV_ClipboardBuffer {
   bool find_isomorphism(UvElementMap *dest_element_map,
                         int island_index,
                         blender::Vector<int> &r_label,
-                        bool *search_abandoned,
-                        int cd_loop_uv_offset);
+                        int cd_loop_uv_offset,
+                        bool *r_search_abandoned);
 
   void write_uvs(UvElementMap *element_map,
                  int island_index,
@@ -65,7 +65,7 @@ static UV_ClipboardBuffer *uv_clipboard = nullptr;
 
 UV_ClipboardBuffer::~UV_ClipboardBuffer()
 {
-  for (const int index : graph.index_range()) {
+  for (const int64_t index : graph.index_range()) {
     delete graph[index];
   }
   graph.clear();
@@ -201,8 +201,8 @@ static bool find_isomorphism(UvElementMap *dest,
                              const int dest_island_index,
                              GraphISO *graph_source,
                              blender::Vector<int> &r_label,
-                             bool *search_abandoned,
-                             int cd_loop_uv_offset)
+                             int cd_loop_uv_offset,
+                             bool *r_search_abandoned)
 {
 
   const int island_total_unique_uvs = dest->island_total_unique_uvs[dest_island_index];
@@ -216,7 +216,7 @@ static bool find_isomorphism(UvElementMap *dest,
   int(*solution)[2] = (int(*)[2])MEM_mallocN(graph_source->n * sizeof(*solution), __func__);
   int solution_length = 0;
   const bool result = ED_uvedit_clipboard_maximum_common_subgraph(
-      graph_source, graph_dest, solution, &solution_length, search_abandoned);
+      graph_source, graph_dest, solution, &solution_length, r_search_abandoned);
 
   /* Todo: Implement "Best Effort" / "Nearest Match" paste functionality here. */
 
@@ -239,16 +239,16 @@ static bool find_isomorphism(UvElementMap *dest,
 bool UV_ClipboardBuffer::find_isomorphism(UvElementMap *dest_element_map,
                                           int dest_island_index,
                                           blender::Vector<int> &r_label,
-                                          bool *search_abandoned,
-                                          int cd_loop_uv_offset)
+                                          int cd_loop_uv_offset,
+                                          bool *r_search_abandoned)
 {
   for (const int64_t source_island_index : graph.index_range()) {
     if (::find_isomorphism(dest_element_map,
                            dest_island_index,
                            graph[source_island_index],
                            r_label,
-                           search_abandoned,
-                           cd_loop_uv_offset)) {
+                           cd_loop_uv_offset,
+                           r_search_abandoned)) {
       const int island_total_unique_uvs =
           dest_element_map->island_total_unique_uvs[dest_island_index];
       const int island_offset = offset[source_island_index];
@@ -312,6 +312,7 @@ static int uv_paste_exec(bContext *C, wmOperator *op)
       scene, view_layer, ((View3D *)nullptr), &objects_len);
 
   int complicated_search = 0;
+  int total_search = 0;
   for (uint ob_index = 0; ob_index < objects_len; ob_index++) {
     Object *ob = objects[ob_index];
     BMEditMesh *em = BKE_editmesh_from_object(ob);
@@ -327,10 +328,11 @@ static int uv_paste_exec(bContext *C, wmOperator *op)
     }
 
     for (int i = 0; i < dest_element_map->total_islands; i++) {
+      total_search++;
       blender::Vector<int> label;
       bool search_abandoned = false;
       const bool found = uv_clipboard->find_isomorphism(
-          dest_element_map, i, label, &search_abandoned, cd_loop_uv_offset);
+          dest_element_map, i, label, cd_loop_uv_offset, &search_abandoned);
       if (!found) {
         if (search_abandoned) {
           complicated_search++;
@@ -347,8 +349,11 @@ static int uv_paste_exec(bContext *C, wmOperator *op)
   }
 
   if (complicated_search) {
-    BKE_reportf(
-        op->reports, RPT_WARNING, "Geometry was too complicated to find a matching island");
+    BKE_reportf(op->reports,
+                RPT_WARNING,
+                "Skipped %d of %d island(s), geometry was too complicated to detect a match",
+                complicated_search,
+                total_search);
   }
 
   MEM_freeN(objects);
