source/blender/editors/uvedit/uvedit_clipboard_graph_iso.hh
@@ -35,4 +35,4 @@ class GraphISO {
  * (Can be used to find graph ismorphism.)
  */
 bool ED_uvedit_clipboard_maximum_common_subgraph(
-    GraphISO *, GraphISO *, int solution[][2], int *solution_length, bool *search_abandoned);
+    GraphISO *, GraphISO *, int solution[][2], int *solution_length, bool *r_search_abandoned);
